# nonebot-plugin-dg-lab-play

./: CHANGELOG.md  LICENSE  README.md  appPulseData.json  customPulseData.json  mkdocs.yml  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: docs.yml  plugin-test.yml  python-package.yml  python-publish.yml  release.yml
docs/: about.md  index.md
docs/config/: command-text.md  dg-lab-client.md  guide.md  pulse-data.md  reply-text.md  ws-server.md
master/: 404.html  index.html  objects.inv  sitemap.xml
master/about/: index.html
master/config/command-text/: index.html
master/config/dg-lab-client/: index.html
master/config/guide/: index.html
master/config/pulse-data/: index.html
master/config/reply-text/: index.html
master/config/ws-server/: index.html
master/faq/: index.html
master/search/: search_index.json
nonebot_plugin_dg_lab_play/: __init__.py  client_manager.py  config.py  model.py  utils.py
nonebot_plugin_dg_lab_play/commands/: __init__.py  control.py  devices.py  dg_lab_device_join.py  dice.py  increase_strength.py  players.py  pulse_control.py  query_status.py  show_pulses.py  strength_control.py  usage.py  virtual.py
scripts/: pulse_data_db.py
tests/: plugin_test.py
